added full system diagram on homepage for requirements (not sure if this was really necessary)

--- a/disco-divas/index.html
+++ b/disco-divas/index.html
@@ -66,12 +66,15 @@
 						
 					</p>
 				</header>
+				<a href="#" class="image featured" style = "width: 500px; display: block; margin-left: auto; margin-right: auto; width: 50%;"><img src="images/System_Design.png" alt="" /></a>
+
 				<p>
 					Welcome to the world of the Disco Divas. Here, we prioritize excitement and joy. We hear colors and see sound... well,
 					at least the second part. Our project is able to create real-time visualizations of music using Fast Fourier Transforms! 
 					Check out our subteam breakdowns, or a general process overview. The Disco Divas are excited to have you!
 				</p>
 
+				
 				<div id = "links">
 					<a href="mech.html">Mechanical</a> || <a href=" elec.html">Electrical</a> || <a href="firm.html">Firmware</a> || <a href="soft.html">Software</a>
 					 || <a href="process.html">Process</a> || <a href="budget.html">Budget</a> || <a href="team.html">The Team</a>
